# Nova

./: .dockerignore  .env copy  .env.example  .gitattributes  .gitignore  .markdownlint.json  .mcp.json  CLAUDE.md  DESIGN.md  LICENSE  Makefile  PROMPT.md  README.md  TODOS.md  UBIQUITOUS_LANGUAGE.md  dev  docker-compose.gpu.yml  docker-compose.rocm.yml  docker-compose.yml  install  models.yaml  ruff.toml  setup  uninstall
baseline-markdown/: Dockerfile  requirements.txt
chat-api/: Dockerfile  pyproject.toml
chat-api/app/: config.py  drain.py  main.py  queue.py  session.py  websocket.py
chat-bridge/: Dockerfile  pyproject.toml
chat-bridge/app/: bridge.py  config.py  main.py
chat-bridge/app/adapters/: base.py  telegram.py
cortex/: Dockerfile  pyproject.toml
cortex/app/: budget.py  clients.py  config.py  cycle.py  db.py  health.py  journal.py  loop.py  main.py  memory.py  prompt_safety.py  reflections.py  router.py  scheduler.py  stimulus.py  task_monitor.py  task_tracker.py
cortex/app/drives/: __init__.py  improve.py  learn.py  maintain.py  quality.py  reflect.py  serve.py
cortex/app/maturation/: __init__.py  aggregator.py  building.py  commands.py  criteria.py  scoping.py  speccing.py  triage.py  verifying.py
cortex/tests/: test_quality_drive.py
intel-worker/: Dockerfile  pyproject.toml
intel-worker/app/: client.py  config.py  main.py  poller.py  queue.py  url_validator.py
intel-worker/app/fetchers/: __init__.py  github.py  page.py  reddit.py  rss.py
knowledge-worker/: Dockerfile  pyproject.toml
knowledge-worker/app/: client.py  config.py  main.py  queue.py  scheduler.py
knowledge-worker/app/crawler/: content_extractor.py  engine.py  link_extractor.py  relevance.py  robots.py
knowledge-worker/app/credentials/: __init__.py  health.py
knowledge-worker/app/extractors/: __init__.py  base.py  github.py
llm-gateway/: Dockerfile  pyproject.toml
llm-gateway/app/: config.py  discovery.py  editor_tracker.py  health.py  main.py  openai_compat.py  openai_router.py  rate_limiter.py  registry.py  response_cache.py  router.py  tier_resolver.py  wol.py
llm-gateway/app/providers/: __init__.py  base.py  chatgpt_subscription_provider.py  claude_subscription_provider.py  fallback_provider.py  gemini_adc_provider.py  litellm_provider.py  local_inference_provider.py  ollama_cloud_fallback.py  ollama_provider.py  openai_compatible_provider.py  remote_provider.py  sglang_provider.py  utils.py  vllm_provider.py
llm-gateway/tests/: test_config_resolution.py
nova-worker-common/: pyproject.toml
nova-worker-common/nova_worker_common/: __init__.py  admin_secret.py  content_hash.py  http_client.py  queue.py  rate_limiter.py  service_auth.py  url_validator.py
nova-worker-common/nova_worker_common/credentials/: __init__.py  builtin.py  provider.py
nova-worker-common/tests/: test_content_hash.py  test_credentials.py  test_url_validator.py
orchestrator/: Dockerfile  pyproject.toml
orchestrator/app/: activity.py  audit.py  auth.py  auth_router.py  auto_friction.py  chat_scorer.py  clients.py  config.py  config_sync.py  conversations.py  db.py  db_schema.sql  effectiveness.py  engram_router.py  friction_router.py  goals_router.py  guest.py  health.py  intel_router.py  jwt_auth.py  knowledge_router.py  linked_accounts.py  linked_accounts_router.py  main.py  model_classifier.py  model_resolver.py  oauth.py  pipeline_router.py  quality_router.py  quality_scorer.py  queue.py  reaper.py  roles.py  router.py  rules.py  session_summary.py  skills.py  stimulus.py  store.py  tool_permissions.py  (+4 more)
orchestrator/app/agents/: runner.py
orchestrator/app/migrations/: 001_base_schema.sql  002_phase4_schema.sql  003_fallbacks_and_default_prompts.sql  004_mcp_servers.sql  005_platform_config.sql  006_agent_endpoints.sql  007_sandbox_tiers.sql  008_context_budgets.sql  009_llm_routing.sql  010_pods_metadata.sql  011_model_defaults.sql  012_intelligent_routing.sql  013_identity_greeting.sql  014_users_and_conversations.sql  015_trusted_networks.sql  016_stage_model_defaults.sql  017_complexity_routing.sql  018_training_logs.sql  019_auth_config.sql  020_rbac_and_tenants.sql  021_cortex_goals.sql  022_adaptive_routing.sql  023_outcome_scoring.sql  024_goal_schedules.sql  025_inference_backend_config.sql  026_parallel_review_group.sql  027_pipeline_stage_tiers.sql  028_dashboard_redesign.sql  029_phase4_completion.sql  030_chat_pod.sql  031_config_audit.sql  032_friction_log.sql  033_chat_agent_prompt.sql  034_default_persona.sql  035_usage_agent_attribution.sql  036_goal_success_criteria.sql  037_sandbox_config.sql  038_intel_schema.sql  039_comments_and_goal_maturation.sql  040_intel_system_goals.sql  (+25 more)
orchestrator/app/pipeline/: __init__.py  checkpoint.py  complexity_classifier.py  complexity_model_map.py  executor.py  prompt_safety.py  schemas.py  stage_model_resolver.py  state_machine.py
orchestrator/app/pipeline/agents/: base.py  code_review.py  context.py  critique.py  decision.py  guardrail.py  post_pipeline.py  task.py
orchestrator/app/pipeline/tools/: __init__.py  http_mcp_client.py  mcp_client.py  registry.py
orchestrator/app/quality_loop/: base.py  cases.py  registry.py  runner.py  score.py  snapshot.py  teardown.py
orchestrator/app/tools/: __init__.py  code_tools.py  config_tools.py  diagnosis_tools.py  git_tools.py  github_tools.py  intel_tools.py  introspect_tools.py  memory_tools.py  platform_tools.py  sandbox.py  web_tools.py
orchestrator/tests/: conftest.py  test_auth.py  test_code_tools.py  test_critique_fail_closed.py  test_git_tools.py  test_guardrail_refactor.py  test_oauth.py  test_quality_cases.py  test_quality_loop_base.py  test_quality_registry.py  test_quality_runner.py  test_quality_score.py  test_quality_scorer.py  test_quality_snapshot.py  test_quality_teardown.py  test_reaper.py  test_retrieval_tuning_loop.py  test_runner.py  test_sandbox.py  test_schema_fail_closed.py
voice-service/: Dockerfile  pyproject.toml
voice-service/app/: config.py  main.py  routes.py
voice-service/app/providers/: __init__.py  base.py  openai_stt.py  openai_tts.py
(+816 files in other folders)
