[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-chat-bridge"
version = "0.1.0"
description = "Nova Chat Bridge — multi-platform chat integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "redis[hiredis]>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-telegram-bot>=21.0",
    "nova-contracts",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
