[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-cortex"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "croniter>=1.0",
    "nova-worker-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
nova-worker-common = { path = "../nova-worker-common", editable = true }
