[project]
name = "knowledge-worker"
version = "0.1.0"
description = "Autonomous knowledge source crawler for Nova AI platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.27",
    "redis>=5.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "cryptography>=44.0",
    "nova-worker-common",
]
