[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-llm-gateway"
version = "0.1.0"
description = "Nova LLM Gateway — ModelProvider abstraction with LiteLLM backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "litellm>=1.55",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "nova-contracts",
    "tenacity>=9.0",
    "google-generativeai>=0.8",  # Gemini ADC support
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
