[project]
name = "nova-worker-common"
version = "0.1.0"
description = "Shared utilities for Nova worker services (intel-worker, knowledge-worker, orchestrator)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "redis>=5.0",
    "cryptography>=44.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.hatch.build.targets.wheel]
packages = ["nova_worker_common"]
