[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-orchestrator"
version = "0.1.0"
description = "Nova Orchestrator — agent lifecycle management and task routing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "nova-contracts",
    "tenacity>=9.0",
    "asyncpg>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
