[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-orchestrator"
version = "0.1.0"
description = "Nova Orchestrator — agent lifecycle management and task routing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "nova-contracts",
    "nova-worker-common",
    "tenacity>=9.0",
    "asyncpg>=0.30",
    "PyJWT>=2.8",
    "bcrypt>=4.1",
    "croniter>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Path-map the two in-repo packages so `uv run pytest` works locally without
# every caller having to pass --no-project --with /path/... for each.
# The Docker build bypasses uv entirely (COPY + pip install), so this is
# dev-only and doesn't affect the production image.
[tool.uv.sources]
nova-contracts = { path = "../nova-contracts", editable = true }
nova-worker-common = { path = "../nova-worker-common", editable = true }
