[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-voice-service"
version = "0.1.0"
description = "Speech-to-text and text-to-speech proxy for Nova"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "openai>=1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "nova-contracts",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
